[tool.poetry]
name = "k3ng-rotator-python"
version = "1.1.1"
description = "Control a K3NG rotator over serial"
authors = ["Reid Sox-Harris <reid@soxharris.com>"]
packages = [{include = "k3ng"}]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
requests = "^2.31.0"
rpyc = "^6.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.2.3"
types-requests = "^2.31.0"
types-pyserial = "^3.5.0.8"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-pyproject = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
